--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./script/script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="sideNavigation">
+      <div class="logo"></div>
+      <ul>
+        <li>Home</li>
+        <li>Trend</li>
+        <li>Feed</li>
+        <p>Discover</p>
+        <li>News and Notable</li>
+        <li>Release Calendar</li>
+        <li>Events</li>
+        <p>Your Collection</p>
+        <li>Favorite Songs</li>
+        <li>Artist</li>
+        <li>Albums</li>
+      </ul>
+    </div>a
+  </body>
 </html>
